change url in pictures

--- a/index.html
+++ b/index.html
@@ -231,31 +231,31 @@
                             <picture class="hero__picture">
                                 <source
                                     media="(max-width: 767px)"
-                                    srcset="/pictures/jpg/header-baner-mob.jpg"
+                                    srcset="./pictures/jpg/header-baner-mob.jpg"
                                 />
 
                                 <source
                                     media="(min-width: 768px) and (max-width: 1023px)"
                                     srcset="
-                                        /pictures/jpg/header-baner-tablet.jpg
+                                        ./pictures/jpg/header-baner-tablet.jpg
                                     "
                                 />
 
                                 <source
                                     media="(min-width: 1024px)"
-                                    srcset="/pictures/jpg/header-baner.jpg"
+                                    srcset="./pictures/jpg/header-baner.jpg"
                                 />
 
                                 <img
                                     src="./pictures/jpg/header-baner-tablet.jpg"
-                                    srcset="/pictures/jpg/header-baner.jpg"
+                                    srcset="./pictures/jpg/header-baner.jpg"
                                     alt="Брендування стаканів"
                                 />
                             </picture>
                             <picture class="hero__picture">
                                 <source
                                     media="(max-width: 767px)"
-                                    srcset="/pictures/jpg/header-baner-mob.jpg"
+                                    srcset="./pictures/jpg/header-baner-mob.jpg"
                                 />
 
                                 <source
@@ -267,19 +267,19 @@
 
                                 <source
                                     media="(min-width: 1024px)"
-                                    srcset="/pictures/jpg/header-baner.jpg"
+                                    srcset="./pictures/jpg/header-baner.jpg"
                                 />
 
                                 <img
                                     src="./pictures/jpg/header-baner-tablet.jpg"
-                                    srcset="/pictures/jpg/header-baner.jpg"
+                                    srcset="./pictures/jpg/header-baner.jpg"
                                     alt="Брендування стаканів"
                                 />
                             </picture>
                             <picture class="hero__picture">
                                 <source
                                     media="(max-width: 767px)"
-                                    srcset="/pictures/jpg/header-baner-mob.jpg"
+                                    srcset="./pictures/jpg/header-baner-mob.jpg"
                                 />
 
                                 <source
@@ -291,12 +291,12 @@
 
                                 <source
                                     media="(min-width: 1024px)"
-                                    srcset="/pictures/jpg/header-baner.jpg"
+                                    srcset="./pictures/jpg/header-baner.jpg"
                                 />
 
                                 <img
                                     src="./pictures/jpg/header-baner-tablet.jpg"
-                                    srcset="/pictures/jpg/header-baner.jpg"
+                                    srcset="./pictures/jpg/header-baner.jpg"
                                     alt="Брендування стаканів"
                                 />
                             </picture>
@@ -776,7 +776,7 @@
                             <picture class="hero__brend_img">
                                 <source
                                     media="(max-width: 767px)"
-                                    srcset="/pictures/jpg/bren-stakaniv-mob.jpg"
+                                    srcset="./pictures/jpg/bren-stakaniv-mob.jpg"
                                 />
 
                                 <source
@@ -788,7 +788,7 @@
 
                                 <source
                                     media="(min-width: 1024px)"
-                                    srcset="/pictures/jpg/bren-stakaniv.jpg"
+                                    srcset="./pictures/jpg/bren-stakaniv.jpg"
                                 />
 
                                 <img
@@ -1667,10 +1667,10 @@
                         <picture
                             ><source
                                 media="(max-width: 767px)"
-                                srcset="/pictures/jpg/sirop-kava-mob.jpg" />
+                                srcset="./pictures/jpg/sirop-kava-mob.jpg" />
                             <img
                                 src="./pictures/jpg/sirop-kava-mob.jpg"
-                                srcset="/pictures/jpg/sirop-kava-mob.jpg 1x"
+                                srcset="./pictures/jpg/sirop-kava-mob.jpg 1x"
                                 alt="sirop-kava"
                         /></picture>
                     </div>
@@ -2053,17 +2053,17 @@
                             <picture class="">
                                 <source
                                     media="(min-width: 768px) and (max-width: 1023px)"
-                                    srcset="/pictures/jpg/sirop-kava-tablet.jpg"
+                                    srcset="./pictures/jpg/sirop-kava-tablet.jpg"
                                 />
 
                                 <source
                                     media="(min-width: 1024px)"
-                                    srcset="/pictures/jpg/sirop-kava.jpg"
+                                    srcset="./pictures/jpg/sirop-kava.jpg"
                                 />
 
                                 <img
                                     src="./pictures/jpg/sirop-kava.jpg"
-                                    srcset="/pictures/jpg/sirop-kava.jpg"
+                                    srcset="./pictures/jpg/sirop-kava.jpg"
                                     alt="kakao-chok"
                                 />
                             </picture>
@@ -2072,15 +2072,15 @@
                             <picture class="">
                                 <source
                                     media="(min-width: 768px) and (max-width: 1023px)"
-                                    srcset="/pictures/jpg/kakao-chok-tablet.jpg"
+                                    srcset="./pictures/jpg/kakao-chok-tablet.jpg"
                                 />
                                 <source
                                     media="(min-width: 1024px)"
-                                    srcset="/pictures/jpg/kakao-chok.jpg"
+                                    srcset="./pictures/jpg/kakao-chok.jpg"
                                 />
                                 <img
                                     src="./pictures/jpg/kakao-chok.jpg"
-                                    srcset="/pictures/jpg/kakao-chok.jpg"
+                                    srcset="./pictures/jpg/kakao-chok.jpg"
                                     alt="kakao-chok"
                                 />
                             </picture>
@@ -2098,10 +2098,10 @@
                         <picture class="brend__img"
                             ><source
                                 media="(max-width: 767px)"
-                                srcset="/pictures/jpg/bren-stakaniv.jpg" />
+                                srcset="./pictures/jpg/bren-stakaniv.jpg" />
                             <img
                                 src="./pictures/jpg/bren-stakaniv.jpg"
-                                srcset="/pictures/jpg/bren-stakaniv.jpg 1x"
+                                srcset="./pictures/jpg/bren-stakaniv.jpg 1x"
                                 alt="sirop-kava"
                         /></picture>
                     </div>
@@ -2619,22 +2619,22 @@
                         <picture class="razom__img">
                             <source
                                 media="(max-width: 767px)"
-                                srcset="/pictures/jpg/razom-mi-mob.jpg"
+                                srcset="./pictures/jpg/razom-mi-mob.jpg"
                             />
 
                             <source
                                 media="(min-width: 768px) and (max-width: 1023px)"
-                                srcset="/pictures/jpg/razom-mi-tablet.jpg"
+                                srcset="./pictures/jpg/razom-mi-tablet.jpg"
                             />
 
                             <source
                                 media="(min-width: 1024px)"
-                                srcset="/pictures/jpg/razom-mi.jpg"
+                                srcset="./pictures/jpg/razom-mi.jpg"
                             />
 
                             <img
                                 src="./pictures/jpg/razom-mi-tablet.jpg"
-                                srcset="/pictures/jpg/razom-mi-tablet.jpg"
+                                srcset="./pictures/jpg/razom-mi-tablet.jpg"
                                 alt="razom-mi"
                             />
                         </picture>
@@ -3737,22 +3737,22 @@
                         <picture>
                             <source
                                 media="(max-width: 767px)"
-                                srcset="/pictures/jpg/nad-partner-mob.jpg"
+                                srcset="./pictures/jpg/nad-partner-mob.jpg"
                             />
 
                             <source
                                 media="(min-width: 768px) and (max-width: 1023px)"
-                                srcset="/pictures/jpg/nad-partner-tablet.jpg"
+                                srcset="./pictures/jpg/nad-partner-tablet.jpg"
                             />
 
                             <source
                                 media="(min-width: 1024px)"
-                                srcset="/pictures/jpg/nad-partner.jpg"
+                                srcset="./pictures/jpg/nad-partner.jpg"
                             />
 
                             <img
                                 src="./pictures/jpg/nad-partner-mob.jpg"
-                                srcset="/pictures/jpg/nad-partner-mob.jpg 1x"
+                                srcset="./pictures/jpg/nad-partner-mob.jpg 1x"
                                 alt="Надійний партнер"
                             />
                         </picture>
