fix url pictures in index.html

--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@
                                 <source
                                     media="(min-width: 768px) and (max-width: 1023px)"
                                     srcset="
-                                        /pictures/jpg/header-baner-tablet.jpg
+                                        ./pictures/jpg/header-baner-tablet.jpg
                                     "
                                 />
 
@@ -285,7 +285,7 @@
                                 <source
                                     media="(min-width: 768px) and (max-width: 1023px)"
                                     srcset="
-                                        /pictures/jpg/header-baner-tablet.jpg
+                                        ./pictures/jpg/header-baner-tablet.jpg
                                     "
                                 />
 
@@ -782,7 +782,7 @@
                                 <source
                                     media="(min-width: 768px) and (max-width: 1023px)"
                                     srcset="
-                                        /pictures/jpg/bren-stakaniv-tablet.jpg
+                                        ./pictures/jpg/bren-stakaniv-tablet.jpg
                                     "
                                 />
 
@@ -794,7 +794,7 @@
                                 <img
                                     src="./pictures/jpg/bren-stakaniv-tablet.jpg"
                                     srcset="
-                                        /pictures/jpg/bren-stakaniv-tablet.jpg 1x
+                                        ./pictures/jpg/bren-stakaniv-tablet.jpg 1x
                                     "
                                     alt="Патріотичне брендування"
                                 />
