upd coffe for index.html

--- a/index.html
+++ b/index.html
@@ -3971,7 +3971,7 @@
             </div>
         </footer>
         <script src="./js/heart.js"></script>
-        <script src="./js/coffe.js"></script>
+        <script src="./js/coffe-index.js"></script>
         <script src="./js/open-categories.js"></script>
         <!-- <script src="./js/basket.js"></script> -->
         <script src="./js/burger.js"></script>
