--- a/index.html
+++ b/index.html
@@ -3971,12 +3971,12 @@
             </div>
         </footer>
         <script src="./js/heart.js"></script>
-        <script src="./js/coffe-index.js"></script>
+        <script src="./js/coffe.js"></script>
         <script src="./js/open-categories.js"></script>
         <!-- <script src="./js/basket.js"></script> -->
         <script src="./js/burger.js"></script>
         <script src="./js/counters.js"></script>
-        <script src="./js/slider-hero.js"></script>
+        <script src="./js/slider-hero-index.js"></script>
         <script src="./js/slider-comments.js"></script>
         <script src="./js/slider.js"></script>
     </body>
