--- a/index.html
+++ b/index.html
@@ -309,27 +309,27 @@
                         <div class="hero__svg">
                             <img
                                 class="hero__arrow arrow-left"
-                                src="../pictures/svg/arrow-left.svg"
+                                src="./pictures/svg/arrow-left.svg"
                                 alt=""
                             />
                             <img
                                 class="hero__coffe full"
-                                src="../pictures/svg/coffe-full.svg"
+                                src="./pictures/svg/coffe-full.svg"
                                 alt=""
                             />
                             <img
                                 class="hero__coffe empty"
-                                src="../pictures/svg/coffe-empty.svg"
+                                src="./pictures/svg/coffe-empty.svg"
                                 alt=""
                             />
                             <img
                                 class="hero__coffe empty empty-second"
-                                src="../pictures/svg/coffe-empty.svg"
+                                src="./pictures/svg/coffe-empty.svg"
                                 alt=""
                             />
                             <img
                                 class="hero__arrow arrow-right"
-                                src="../pictures/svg/arrow-right.svg"
+                                src="./pictures/svg/arrow-right.svg"
                                 alt=""
                             />
                         </div>
