--- a/index.html
+++ b/index.html
@@ -911,11 +911,19 @@
                                         <a
                                             class="popular__cart_link"
                                             href="./components/cart-item.html"
+                                        >
+                                            <div
+                                                class="ImgField popular__cart_img"
                                             >
-                                        <div class="ImgField popular__cart_img">
-                                            <img class="image first" src="./pictures/png/goods/cap-gofra.png"/>
-                                            <img class="image second" src="./pictures/png/goods/cap-gofra.png"/>
-                                          </div></a>
+                                                <img
+                                                    class="image first"
+                                                    src="./pictures/png/goods/cap-gofra.png"
+                                                />
+                                                <img
+                                                    class="image second"
+                                                    src="./pictures/png/goods/cap-gofra.png"
+                                                /></div
+                                        ></a>
                                     </div>
 
                                     <div class="popular__cart_info">
@@ -1003,11 +1011,18 @@
                                         <a
                                             class="popular__cart_link"
                                             href="./components/cart-item.html"
-                                            ><img
-                                                class="popular__cart_img"
-                                                src="./pictures/png/goods/cap-gofra.png"
-                                                alt=""
-                                        /></a>
+                                            ><div
+                                                class="ImgField popular__cart_img"
+                                            >
+                                                <img
+                                                    class="image first"
+                                                    src="./pictures/png/goods/cap-gofra.png"
+                                                />
+                                                <img
+                                                    class="image second"
+                                                    src="./pictures/png/goods/cap-gofra.png"
+                                                /></div
+                                        ></a>
                                     </div>
 
                                     <div class="popular__cart_info">
@@ -1094,11 +1109,18 @@
                                         <a
                                             class="popular__cart_link"
                                             href="./components/cart-item.html"
-                                            ><img
-                                                class="popular__cart_img"
-                                                src="./pictures/png/goods/cap-gofra.png"
-                                                alt=""
-                                        /></a>
+                                            ><div
+                                                class="ImgField popular__cart_img"
+                                            >
+                                                <img
+                                                    class="image first"
+                                                    src="./pictures/png/goods/cap-gofra.png"
+                                                />
+                                                <img
+                                                    class="image second"
+                                                    src="./pictures/png/goods/cap-gofra.png"
+                                                /></div
+                                        ></a>
                                     </div>
 
                                     <div class="popular__cart_info">
@@ -1185,11 +1207,18 @@
                                         <a
                                             class="popular__cart_link"
                                             href="./components/cart-item.html"
-                                            ><img
-                                                class="popular__cart_img"
-                                                src="./pictures/png/goods/cap-gofra.png"
-                                                alt=""
-                                        /></a>
+                                            ><div
+                                                class="ImgField popular__cart_img"
+                                            >
+                                                <img
+                                                    class="image first"
+                                                    src="./pictures/png/goods/cap-gofra.png"
+                                                />
+                                                <img
+                                                    class="image second"
+                                                    src="./pictures/png/goods/cap-gofra.png"
+                                                /></div
+                                        ></a>
                                     </div>
 
                                     <div class="popular__cart_info">
@@ -1276,11 +1305,18 @@
                                         <a
                                             class="popular__cart_link"
                                             href="./components/cart-item.html"
-                                            ><img
-                                                class="popular__cart_img"
-                                                src="./pictures/png/goods/cap-gofra.png"
-                                                alt=""
-                                        /></a>
+                                            ><div
+                                                class="ImgField popular__cart_img"
+                                            >
+                                                <img
+                                                    class="image first"
+                                                    src="./pictures/png/goods/cap-gofra.png"
+                                                />
+                                                <img
+                                                    class="image second"
+                                                    src="./pictures/png/goods/cap-gofra.png"
+                                                /></div
+                                        ></a>
                                     </div>
 
                                     <div class="popular__cart_info">
@@ -1367,11 +1403,18 @@
                                         <a
                                             class="popular__cart_link"
                                             href="./components/cart-item.html"
-                                            ><img
-                                                class="popular__cart_img"
-                                                src="./pictures/png/goods/cap-gofra.png"
-                                                alt=""
-                                        /></a>
+                                            ><div
+                                                class="ImgField popular__cart_img"
+                                            >
+                                                <img
+                                                    class="image first"
+                                                    src="./pictures/png/goods/cap-gofra.png"
+                                                />
+                                                <img
+                                                    class="image second"
+                                                    src="./pictures/png/goods/cap-gofra.png"
+                                                /></div
+                                        ></a>
                                     </div>
 
                                     <div class="popular__cart_info">
@@ -1458,11 +1501,18 @@
                                         <a
                                             class="popular__cart_link"
                                             href="./components/cart-item.html"
-                                            ><img
-                                                class="popular__cart_img"
-                                                src="./pictures/png/goods/cap-gofra.png"
-                                                alt=""
-                                        /></a>
+                                            ><div
+                                                class="ImgField popular__cart_img"
+                                            >
+                                                <img
+                                                    class="image first"
+                                                    src="./pictures/png/goods/cap-gofra.png"
+                                                />
+                                                <img
+                                                    class="image second"
+                                                    src="./pictures/png/goods/cap-gofra.png"
+                                                /></div
+                                        ></a>
                                     </div>
 
                                     <div class="popular__cart_info">
@@ -1549,11 +1599,18 @@
                                         <a
                                             class="popular__cart_link"
                                             href="./components/cart-item.html"
-                                            ><img
-                                                class="popular__cart_img"
-                                                src="./pictures/png/goods/cap-gofra.png"
-                                                alt=""
-                                        /></a>
+                                            ><div
+                                                class="ImgField popular__cart_img"
+                                            >
+                                                <img
+                                                    class="image first"
+                                                    src="./pictures/png/goods/cap-gofra.png"
+                                                />
+                                                <img
+                                                    class="image second"
+                                                    src="./pictures/png/goods/cap-gofra.png"
+                                                /></div
+                                        ></a>
                                     </div>
 
                                     <div class="popular__cart_info">
@@ -1640,11 +1697,18 @@
                                         <a
                                             class="popular__cart_link"
                                             href="./components/cart-item.html"
-                                            ><img
-                                                class="popular__cart_img"
-                                                src="./pictures/png/goods/cap-gofra.png"
-                                                alt=""
-                                        /></a>
+                                            ><div
+                                                class="ImgField popular__cart_img"
+                                            >
+                                                <img
+                                                    class="image first"
+                                                    src="./pictures/png/goods/cap-gofra.png"
+                                                />
+                                                <img
+                                                    class="image second"
+                                                    src="./pictures/png/goods/cap-gofra.png"
+                                                /></div
+                                        ></a>
                                     </div>
 
                                     <div class="popular__cart_info">
@@ -1760,11 +1824,18 @@
                                         <a
                                             class="new__cart_link"
                                             href="./components/cart-item.html"
-                                            ><img
-                                                class="new__cart_img"
-                                                src="./pictures/png/goods/cap-gofra.png"
-                                                alt=""
-                                        /></a>
+                                            ><div
+                                                class="ImgField popular__cart_img"
+                                            >
+                                                <img
+                                                    class="image first"
+                                                    src="./pictures/png/goods/cap-gofra.png"
+                                                />
+                                                <img
+                                                    class="image second"
+                                                    src="./pictures/png/goods/cap-gofra.png"
+                                                /></div
+                                        ></a>
                                     </div>
 
                                     <div class="new__cart_info">
@@ -1851,11 +1922,18 @@
                                         <a
                                             class="new__cart_link"
                                             href="./components/cart-item.html"
-                                            ><img
-                                                class="new__cart_img"
-                                                src="./pictures/png/goods/cap-gofra.png"
-                                                alt=""
-                                        /></a>
+                                            ><div
+                                                class="ImgField popular__cart_img"
+                                            >
+                                                <img
+                                                    class="image first"
+                                                    src="./pictures/png/goods/cap-gofra.png"
+                                                />
+                                                <img
+                                                    class="image second"
+                                                    src="./pictures/png/goods/cap-gofra.png"
+                                                /></div
+                                        ></a>
                                     </div>
 
                                     <div class="new__cart_info">
@@ -1942,11 +2020,18 @@
                                         <a
                                             class="new__cart_link"
                                             href="./components/cart-item.html"
-                                            ><img
-                                                class="new__cart_img"
-                                                src="./pictures/png/goods/cap-gofra.png"
-                                                alt=""
-                                        /></a>
+                                            ><div
+                                                class="ImgField popular__cart_img"
+                                            >
+                                                <img
+                                                    class="image first"
+                                                    src="./pictures/png/goods/cap-gofra.png"
+                                                />
+                                                <img
+                                                    class="image second"
+                                                    src="./pictures/png/goods/cap-gofra.png"
+                                                /></div
+                                        ></a>
                                     </div>
 
                                     <div class="new__cart_info">
@@ -2033,11 +2118,18 @@
                                         <a
                                             class="new__cart_link"
                                             href="./components/cart-item.html"
-                                            ><img
-                                                class="new__cart_img"
-                                                src="./pictures/png/goods/cap-gofra.png"
-                                                alt=""
-                                        /></a>
+                                            ><div
+                                                class="ImgField popular__cart_img"
+                                            >
+                                                <img
+                                                    class="image first"
+                                                    src="./pictures/png/goods/cap-gofra.png"
+                                                />
+                                                <img
+                                                    class="image second"
+                                                    src="./pictures/png/goods/cap-gofra.png"
+                                                /></div
+                                        ></a>
                                     </div>
 
                                     <div class="new__cart_info">
